--- a/src/output.css
+++ b/src/output.css
@@ -526,14 +526,8 @@
   .pointer-events-none {
     pointer-events: none;
   }
-  .collapse {
-    visibility: collapse;
-  }
   .fixed {
     position: fixed;
-  }
-  .relative {
-    position: relative;
   }
   .top-\[88\%\] {
     top: 88%;
@@ -577,18 +571,6 @@
   .hidden {
     display: none;
   }
-  .inline-flex {
-    display: inline-flex;
-  }
-  .list-item {
-    display: list-item;
-  }
-  .table {
-    display: table;
-  }
-  .h-\[80\%\] {
-    height: 80%;
-  }
   .h-\[8vh\] {
     height: 8vh;
   }
@@ -604,11 +586,14 @@
   .h-\[72\%\] {
     height: 72%;
   }
+  .h-\[75\%\] {
+    height: 75%;
+  }
   .h-\[78vh\] {
     height: 78vh;
   }
-  .w-\[80\%\] {
-    width: 80%;
+  .h-\[80\%\] {
+    height: 80%;
   }
   .w-\[100\%\] {
     width: 100%;
@@ -616,37 +601,14 @@
   .w-\[100vw\] {
     width: 100vw;
   }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
-  .flex-grow {
-    flex-grow: 1;
-  }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .-translate-y-10 {
-    --tw-translate-y: calc(var(--spacing) * -10);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-y-0 {
-    --tw-translate-y: calc(var(--spacing) * 0);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .rotate-\[180deg\] {
     rotate: 180deg;
-  }
-  .transform {
-    transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
   }
   .animate-show {
     animation: var(--animate-show);
   }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .resize {
-    resize: both;
   }
   .scroll-p-20 {
     scroll-padding: calc(var(--spacing) * 20);
@@ -705,10 +667,6 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
   .border-1 {
     border-style: var(--tw-border-style);
     border-width: 1px;
@@ -718,9 +676,6 @@
   }
   .bg-blue-500 {
     background-color: var(--color-blue-500);
-  }
-  .bg-white {
-    background-color: var(--color-white);
   }
   .bg-white\/20 {
     background-color: color-mix(in oklab, var(--color-white) 20%, transparent);
@@ -733,16 +688,9 @@
     --tw-gradient-from: var(--color-blue-200);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
-  .to-pink-200 {
-    --tw-gradient-to: var(--color-pink-200);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
   .to-pink-200\/80 {
     --tw-gradient-to: color-mix(in oklab, var(--color-pink-200) 80%, transparent);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .p-0 {
-    padding: calc(var(--spacing) * 0);
   }
   .p-0\.5 {
     padding: calc(var(--spacing) * 0.5);
@@ -785,9 +733,9 @@
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
-  .text-lg {
-    font-size: var(--text-lg);
-    line-height: var(--tw-leading, var(--text-lg--line-height));
+  .text-base {
+    font-size: var(--text-base);
+    line-height: var(--tw-leading, var(--text-base--line-height));
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
@@ -800,9 +748,6 @@
   .tracking-widest {
     --tw-tracking: var(--tracking-widest);
     letter-spacing: var(--tracking-widest);
-  }
-  .text-wrap {
-    text-wrap: wrap;
   }
   .whitespace-nowrap {
     white-space: nowrap;
@@ -822,9 +767,6 @@
   .text-gray-700 {
     color: var(--color-gray-700);
   }
-  .underline {
-    text-decoration-line: underline;
-  }
   .opacity-20 {
     opacity: 20%;
   }
@@ -838,10 +780,6 @@
   .shadow-xl {
     --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .invalid\:border-none {
     &:invalid {
@@ -909,33 +847,6 @@
       --scrollbar-track: oklch(0.872 0.01 258.338);
     }
   }
-  .hover\:sm\:scrollbar-thin {
-    &:hover {
-      @media (hover: hover) {
-        @media (width >= 40rem) {
-          &::-webkit-scrollbar-track {
-            background-color: var(--scrollbar-track);
-            border-radius: var(--scrollbar-track-radius);
-          }
-          &::-webkit-scrollbar-thumb {
-            background-color: var(--scrollbar-thumb);
-            border-radius: var(--scrollbar-thumb-radius);
-          }
-          &::-webkit-scrollbar-corner {
-            background-color: var(--scrollbar-corner);
-            border-radius: var(--scrollbar-corner-radius);
-          }
-          scrollbar-width: thin;
-          scrollbar-color: var(--scrollbar-thumb, initial) var(--scrollbar-track, initial);
-          &::-webkit-scrollbar {
-            display: block;
-            width: 8px;
-            height: 8px;
-          }
-        }
-      }
-    }
-  }
   .md\:scrollbar-none {
     @media (width >= 48rem) {
       scrollbar-width: none;
@@ -954,85 +865,80 @@
       width: 70%;
     }
   }
-  .lg\:w-\[60\%\] {
+  .lg\:flex {
     @media (width >= 64rem) {
-      width: 60%;
-    }
-  }
-  .xl\:flex {
-    @media (width >= 80rem) {
       display: flex;
     }
   }
-  .xl\:hidden {
-    @media (width >= 80rem) {
+  .lg\:hidden {
+    @media (width >= 64rem) {
       display: none;
     }
   }
-  .xl\:h-\[70vh\] {
-    @media (width >= 80rem) {
+  .lg\:h-\[70vh\] {
+    @media (width >= 64rem) {
       height: 70vh;
     }
   }
-  .xl\:h-\[82\%\] {
-    @media (width >= 80rem) {
+  .lg\:h-\[82\%\] {
+    @media (width >= 64rem) {
       height: 82%;
     }
   }
-  .xl\:w-\[28\%\] {
-    @media (width >= 80rem) {
+  .lg\:w-\[28\%\] {
+    @media (width >= 64rem) {
       width: 28%;
     }
   }
-  .xl\:w-\[40\%\] {
-    @media (width >= 80rem) {
+  .lg\:w-\[40\%\] {
+    @media (width >= 64rem) {
       width: 40%;
     }
   }
-  .xl\:items-center {
-    @media (width >= 80rem) {
+  .lg\:items-center {
+    @media (width >= 64rem) {
       align-items: center;
     }
   }
-  .xl\:justify-center {
-    @media (width >= 80rem) {
+  .lg\:justify-center {
+    @media (width >= 64rem) {
       justify-content: center;
     }
   }
-  .xl\:gap-\[4\%\] {
-    @media (width >= 80rem) {
+  .lg\:gap-\[4\%\] {
+    @media (width >= 64rem) {
       gap: 4%;
     }
   }
-  .xl\:gap-x-\[10\%\] {
-    @media (width >= 80rem) {
+  .lg\:gap-x-\[10\%\] {
+    @media (width >= 64rem) {
       column-gap: 10%;
     }
   }
-  .xl\:overflow-hidden {
-    @media (width >= 80rem) {
+  .lg\:overflow-hidden {
+    @media (width >= 64rem) {
       overflow: hidden;
     }
   }
-  .xl\:overflow-y-hidden {
-    @media (width >= 80rem) {
+  .lg\:overflow-y-hidden {
+    @media (width >= 64rem) {
       overflow-y: hidden;
     }
   }
-  .xl\:p-0 {
-    @media (width >= 80rem) {
+  .lg\:p-0 {
+    @media (width >= 64rem) {
       padding: calc(var(--spacing) * 0);
     }
   }
-  .xl\:pt-8 {
-    @media (width >= 80rem) {
+  .lg\:pt-8 {
+    @media (width >= 64rem) {
       padding-top: calc(var(--spacing) * 8);
     }
   }
-  .xl\:text-5xl {
-    @media (width >= 80rem) {
-      font-size: var(--text-5xl);
-      line-height: var(--tw-leading, var(--text-5xl--line-height));
+  .lg\:text-4xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-4xl);
+      line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
 }
@@ -1071,8 +977,8 @@
       outline-color: var(--color-blue-500);
     }
     @media (width >= 64rem) {
-      font-size: var(--text-xl);
-      line-height: var(--tw-leading, var(--text-xl--line-height));
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
   .formElement {
@@ -1110,10 +1016,10 @@
     --tw-duration: 400ms;
     transition-duration: 400ms;
     @media (width >= 64rem) {
-      height: calc(var(--spacing) * 70);
+      height: calc(var(--spacing) * 60);
     }
     @media (width >= 64rem) {
-      font-size: 130%;
+      font-size: 100%;
     }
   }
   .visibleBlock {
@@ -1128,11 +1034,11 @@
     background-color: var(--color-blue-500);
     padding-inline: calc(var(--spacing) * 4);
     font-family: var(--font-poppins);
-    font-size: var(--text-2xl);
-    line-height: var(--tw-leading, var(--text-2xl--line-height));
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
     color: var(--color-gray-200);
     @media (width >= 48rem) {
-      height: calc(var(--spacing) * 20);
+      height: calc(var(--spacing) * 14);
     }
   }
   .studentBlock {
@@ -1197,10 +1103,10 @@
     --tw-duration: 400ms;
     transition-duration: 400ms;
     @media (width >= 48rem) {
-      height: calc(var(--spacing) * 15);
+      height: calc(var(--spacing) * 11);
     }
     @media (width >= 48rem) {
-      width: calc(var(--spacing) * 15);
+      width: calc(var(--spacing) * 11);
     }
   }
   .editInput {
@@ -1280,46 +1186,6 @@
     transform: translate-y-0;
     opacity: 1;
   }
-}
-@property --tw-translate-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0;
-}
-@property --tw-translate-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0;
-}
-@property --tw-translate-z {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0;
-}
-@property --tw-rotate-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: rotateX(0);
-}
-@property --tw-rotate-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: rotateY(0);
-}
-@property --tw-rotate-z {
-  syntax: "*";
-  inherits: false;
-  initial-value: rotateZ(0);
-}
-@property --tw-skew-x {
-  syntax: "*";
-  inherits: false;
-  initial-value: skewX(0);
-}
-@property --tw-skew-y {
-  syntax: "*";
-  inherits: false;
-  initial-value: skewY(0);
 }
 @property --tw-border-style {
   syntax: "*";
